force-app/main/default/objects/Release_Signoff_Infrastructure__c/Release_Signoff_Infrastructure__c.object-meta.xml
<CustomObject>
    <description>Tracks approvals for Infrastructure projects.</description>
    <label>Release Signoff Infrastructure</label>
    <nameField>
        <label>Release Signoff Infrastructure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Signoffs Infrastructure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>