force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Capacity_Approver__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capacity Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_Infrastructure1</relationshipName>
    <type>Lookup</type>
</CustomField>