force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Capacity_Approver_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Approver_Signoff__c</fullName>
    <label>Capacity Approver Signoff</label>
    <type>Date</type>
</CustomField>