force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/CCE_and_Operations__c.field-meta.xml
<CustomField>
    <fullName>CCE_and_Operations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCE and Operations</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureizfZ</relationshipName>
    <type>Lookup</type>
</CustomField>