force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/CCE_and_Operations_Signoff__c.field-meta.xml
<CustomField>
    <fullName>CCE_and_Operations_Signoff__c</fullName>
    <label>CCE and Operations Signoff</label>
    <type>Date</type>
</CustomField>