force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Chatter_Now_Approver__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Now_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chatter Now Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHAWI</relationshipName>
    <type>Lookup</type>
</CustomField>