force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Chatter_Now_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Now_Signoff__c</fullName>
    <label>Chatter Now Signoff</label>
    <type>Date</type>
</CustomField>