force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Dev_VP_Approver__c.field-meta.xml
<CustomField>
    <fullName>Dev_VP_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHCXr</relationshipName>
    <type>Lookup</type>
</CustomField>