force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Dev_VP_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Dev_VP_Signoff__c</fullName>
    <label>Dev Signoff</label>
    <type>Date</type>
</CustomField>