force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Development_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Development_Engineering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHDeA</relationshipName>
    <type>Lookup</type>
</CustomField>