force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Development_Engineering_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Development_Engineering_Signoff__c</fullName>
    <label>Engineering Signoff</label>
    <type>Date</type>
</CustomField>