force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/FFX_Approver__c.field-meta.xml
<CustomField>
    <fullName>FFX_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FFX Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_Infrastructure8</relationshipName>
    <type>Lookup</type>
</CustomField>