force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/FFX_Signoff__c.field-meta.xml
<CustomField>
    <fullName>FFX_Signoff__c</fullName>
    <label>FFX Signoff</label>
    <type>Date</type>
</CustomField>