force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/HBase_Approver__c.field-meta.xml
<CustomField>
    <fullName>HBase_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HBase Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_Infrastructure8Dql</relationshipName>
    <type>Lookup</type>
</CustomField>