force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/HBase_Signoff__c.field-meta.xml
<CustomField>
    <fullName>HBase_Signoff__c</fullName>
    <label>HBase Signoff</label>
    <type>Date</type>
</CustomField>