force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Insights_Approver__c.field-meta.xml
<CustomField>
    <fullName>Insights_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insights Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_Infrastructure8Dqv</relationshipName>
    <type>Lookup</type>
</CustomField>