force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Insights_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Insights_Signoff__c</fullName>
    <label>Insights Signoff</label>
    <type>Date</type>
</CustomField>