force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/LiveAgent_Approver__c.field-meta.xml
<CustomField>
    <fullName>LiveAgent_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LiveAgent Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHAW8</relationshipName>
    <type>Lookup</type>
</CustomField>