force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/LiveAgent_Signoff__c.field-meta.xml
<CustomField>
    <fullName>LiveAgent_Signoff__c</fullName>
    <label>LiveAgent Signoff</label>
    <type>Date</type>
</CustomField>