force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/M_M_Approver__c.field-meta.xml
<CustomField>
    <fullName>M_M_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M&amp;M Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_Infrastructure7</relationshipName>
    <type>Lookup</type>
</CustomField>