force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/M_M_Signoff__c.field-meta.xml
<CustomField>
    <fullName>M_M_Signoff__c</fullName>
    <label>M&amp;M Signoff</label>
    <type>Date</type>
</CustomField>