force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/OSC_Exec_Approver__c.field-meta.xml
<CustomField>
    <fullName>OSC_Exec_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SR Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHCYu</relationshipName>
    <type>Lookup</type>
</CustomField>