force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/OSC_Exec_Signoff__c.field-meta.xml
<CustomField>
    <fullName>OSC_Exec_Signoff__c</fullName>
    <label>SR Signoff</label>
    <type>Date</type>
</CustomField>