force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/PODSquad_PO_Approver__c.field-meta.xml
<CustomField>
    <fullName>PODSquad_PO_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PODOps PO Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_Infrastructure</relationshipName>
    <type>Lookup</type>
</CustomField>