force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/PODSquad_PO_Signoff__c.field-meta.xml
<CustomField>
    <fullName>PODSquad_PO_Signoff__c</fullName>
    <label>PODOps PO Signoff</label>
    <type>Date</type>
</CustomField>