force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/QE_VP_Approver__c.field-meta.xml
<CustomField>
    <fullName>QE_VP_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QE Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHCY1</relationshipName>
    <type>Lookup</type>
</CustomField>