force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/QE_VP_Signoff__c.field-meta.xml
<CustomField>
    <fullName>QE_VP_Signoff__c</fullName>
    <label>QE Signoff</label>
    <type>Date</type>
</CustomField>