force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Release_Approved__c.field-meta.xml
<CustomField>
    <fullName>Release_Approved__c</fullName>
    <label>Release Approved</label>
    <type>Date</type>
</CustomField>