force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Release_Management_Approver__c.field-meta.xml
<CustomField>
    <fullName>Release_Management_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_Infrastructure6</relationshipName>
    <type>Lookup</type>
</CustomField>