force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Release_Management_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Release_Management_Signoff__c</fullName>
    <label>RM Signoff</label>
    <type>Date</type>
</CustomField>