force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Sandbox_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sandbox Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_Infrastructure9</relationshipName>
    <type>Lookup</type>
</CustomField>