force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Sandbox_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Signoff__c</fullName>
    <label>Sandbox Signoff</label>
    <type>Date</type>
</CustomField>