force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Scheduled_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Signoff_Date__c</fullName>
    <label>Scheduled Signoff Date</label>
    <type>Date</type>
</CustomField>