force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Search_Approver__c.field-meta.xml
<CustomField>
    <fullName>Search_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Search Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHAVo</relationshipName>
    <type>Lookup</type>
</CustomField>