force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Search_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Search_Signoff__c</fullName>
    <label>Search Signoff</label>
    <type>Date</type>
</CustomField>