force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Service_Delivery_Technical_Operations__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Technical_Operations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Infrastructure Engineering</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHDdq</relationshipName>
    <type>Lookup</type>
</CustomField>