force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Service_Delivery_TechOps_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_TechOps_Signoff__c</fullName>
    <label>Infrastructure Engineering Signoff</label>
    <type>Date</type>
</CustomField>