force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Sites_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sites_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sites Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHAVy</relationshipName>
    <type>Lookup</type>
</CustomField>