force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Sites_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Sites_Signoff__c</fullName>
    <label>Sites Signoff</label>
    <type>Date</type>
</CustomField>