force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Staggered_Release__c.field-meta.xml
<CustomField>
    <fullName>Staggered_Release__c</fullName>
    <label>Staggered Release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GUS</fullName>
            </value>
            <value>
                <fullName>SB</fullName>
            </value>
            <value>
                <fullName>R0</fullName>
            </value>
            <value>
                <fullName>R1</fullName>
            </value>
            <value>
                <fullName>R2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>