force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/TBR_Approver__c.field-meta.xml
<CustomField>
    <fullName>TBR_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCR Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_Infrastructure5</relationshipName>
    <type>Lookup</type>
</CustomField>