force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/TBR_Signoff__c.field-meta.xml
<CustomField>
    <fullName>TBR_Signoff__c</fullName>
    <label>TCR Signoff</label>
    <type>Date</type>
</CustomField>