force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Technology_Exec__c.field-meta.xml
<CustomField>
    <fullName>Technology_Exec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chief Infrastructure Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHDdg</relationshipName>
    <type>Lookup</type>
</CustomField>