force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Technology_Exec_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Technology_Exec_Signoff__c</fullName>
    <label>Chief Infrastructure Officer Signoff</label>
    <type>Date</type>
</CustomField>