force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Technology_Products_Operations__c.field-meta.xml
<CustomField>
    <fullName>Technology_Products_Operations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technology &amp; Products Operations</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHDe0</relationshipName>
    <type>Lookup</type>
</CustomField>