force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/Technology_Products_Operations_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Technology_Products_Operations_Signoff__c</fullName>
    <label>Technology &amp; Products Operations Signoff</label>
    <type>Date</type>
</CustomField>