force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/TechOps_Eng_VP_Approver__c.field-meta.xml
<CustomField>
    <fullName>TechOps_Eng_VP_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TechOps Eng Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHCYB</relationshipName>
    <type>Lookup</type>
</CustomField>