force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/TechOps_Eng_VP_Signoff__c.field-meta.xml
<CustomField>
    <fullName>TechOps_Eng_VP_Signoff__c</fullName>
    <label>TechOps Eng Signoff</label>
    <type>Date</type>
</CustomField>