force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/TechOps_Operations_Approver__c.field-meta.xml
<CustomField>
    <fullName>TechOps_Operations_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TechOps Operations Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoffs_InfrastructureHCZ4</relationshipName>
    <type>Lookup</type>
</CustomField>