force-app/main/default/objects/Release_Signoff_Infrastructure__c/fields/TechOps_Operations_Signoff__c.field-meta.xml
<CustomField>
    <fullName>TechOps_Operations_Signoff__c</fullName>
    <label>TechOps Operations Signoff</label>
    <type>Date</type>
</CustomField>