force-app/main/default/objects/Release_Signoff_Infrastructure__c/recordTypes/New_Pods.recordType-meta.xml
<RecordType>
    <fullName>New_Pods</fullName>
    <active>true</active>
    <description>Tracks approvals for new POD buildouts</description>
    <label>New Pods</label>
</RecordType>