force-app/main/default/objects/Release_Signoff_Infrastructure__c/recordTypes/Splits_Migrations.recordType-meta.xml
<RecordType>
    <fullName>Splits_Migrations</fullName>
    <active>true</active>
    <description>Tracks approvals for POD migrations and splits</description>
    <label>Splits &amp; Migrations</label>
</RecordType>